--- a/style.css
+++ b/style.css
@@ -35,3 +35,29 @@ button {
   border-radius: 5px;
   box-shadow: 2px 5px 5px #333;
 }
+
+li.high-priority{
+  background-color: red;
+}
+
+li.medium-priority{
+  background-color: blue;
+}
+
+li.low-priority{
+  background-color: green;
+}
+
+
+#priority option[value="high-priority"]{
+ background-color:red;
+}
+
+
+
+
+
+
+
+
+
